// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteImage renders renders the normal state 1`] = `
<View
  style={Object {}}
>
  <View
    style={
      Array [
        Array [
          Object {},
          undefined,
          undefined,
        ],
        Object {
          "overflow": "hidden",
        },
      ]
    }
  >
    <FastImageView
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      resizeMode="cover"
      source={
        Object {
          "uri": "https://homepages.cae.wisc.edu/~ece533/images/airplane.png",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0E0E0",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#212121"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;

exports[`RemoteImage renders renders with minimum required props 1`] = `
<View
  style={Object {}}
>
  <Image
    onError={[Function]}
    onLoadEnd={[Function]}
    resizeMode="cover"
    style={
      Array [
        Object {},
        undefined,
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#E0E0E0",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#212121"
      hidesWhenStopped={true}
      size="large"
    />
  </View>
</View>
`;
